# Multiple-Choice-Question-Generation-With-LLMs-and-KG

./: .gitignore  README.md  baseline.ipynb  config.yaml  docker-compose.yml  main.py  pyproject.toml  test.ipynb
archive/: analyze_kg_effectiveness.py  (+5 more)
services/auth/: README.md  pyproject.toml
services/auth/src/auth/: __init__.py  config.py  database.py  routes.py  schemas.py  security.py
services/generation/: pyproject.toml
services/generation/src/generation/: __init__.py  settings.yaml
services/generation/src/generation/api/routers/: quiz_generation.py  upload.py  vector_database.py
services/generation/src/generation/application/quiz_generation/: __init__.py  quiz_generation.py
services/generation/src/generation/application/vector_database/: __init__.py  index.py  query.py
services/generation/src/generation/domain/analysis/: service.py
services/generation/src/generation/domain/llm_as_judge/: prompts.py  service.py
services/generation/src/generation/domain/quiz_generation/: service.py
services/generation/src/generation/domain/quiz_generation/modules/concept_card_extractor/: service.py
services/generation/src/generation/domain/quiz_generation/modules/correction/: service.py
services/generation/src/generation/domain/quiz_generation/modules/distractors_generator/: service.py
services/generation/src/generation/domain/quiz_generation/modules/explanation_generator/: service.py
services/generation/src/generation/domain/quiz_generation/modules/question_answer_generator/: service.py
services/generation/src/generation/domain/quiz_generation/modules/topics_generator/: service.py
services/generation/src/generation/domain/quiz_generation/modules/validator/: service.py
services/generation/src/generation/domain/quiz_generation/modules/validator/multi_agents/factual/: service.py
services/generation/src/generation/domain/quiz_generation/prompts/: concept_cards.py  distractors_generator.py  explanation_generator.py  factual.py  pedagogical.py  psychometric.py  question_answer_generator.py  quiz_correction.py  topic_generator.py
services/generation/src/generation/domain/vector_db_construction/: __init__.py  service.py
services/generation/src/generation/shared/settings/: __init__.py  llm_as_judge.py  question_answer_generator.py  quiz_settings.py  settings.py  vector_database.py
services/generation/src/generation/shared/static_files/dsa2025/: book.md  mcqs.json
services/generation/src/generation/shared/static_files/int3405/: book.md  mcqs.json
services/generation/src/generation/shared/static_files/rl2025/: learning_outcomes.json  mcqs.json
services/generation/src/generation/shared/utils/: generation.py
services/rag/: pyproject.toml
services/rag/src/rag/: __init__.py  settings.yaml
services/rag/src/rag/domain/local_search/entity_extracter/: entity_extracter.py
services/rag/src/rag/domain/local_search/entity_mapper/: entity_mapper.py
services/rag/src/rag/shared/settings/local_search/: extract_entity.py
(+289 files in other folders)
