[project]
name = "kltn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.uv.workspace]
members = [
    "libs/lite_llm",
    "libs/postgres_db",
    "services/rag",
    "libs/base",
    "libs/logger",
    "libs/storage",
    "services/generation",
    "libs/graph_db",
    "services/indexing",
    "services/auth",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
