[project]
name = "auth"
version = "0.1.0"
description = "Authentication service for educational platform"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.7.0",
    "passlib[bcrypt]>=1.7.4",
    "asyncpg>=0.30.0",
]

[project.scripts]
auth = "auth:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
