[project]
name = "generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "vulh-1357", email = "le.hoang.vu@sun-asterisk.com" }
]
requires-python = ">=3.13"
dependencies = [
    "base",
    "chromadb>=1.0.20",
    "easy-dict>=0.1.1",
    "easydict>=1.13",
    "fastapi>=0.109.1",
    "google-generativeai>=0.8.5",
    "httpx>=0.24.0",
    "langgraph>=0.6.5",
    "lite-llm",
    "logger",
    "ollama>=0.6.0",
    "pdfplumber>=0.11.7",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymupdf>=1.26.3",
    "python-pptx>=1.0.2",
    "storage",
]

[project.scripts]
generation = "generation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
logger = { workspace = true }
base = { workspace = true }
lite-llm = { workspace = true }
storage = { workspace = true }
