[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "vulh-1357", email = "le.hoang.vu@sun-asterisk.com" }
]
requires-python = ">=3.13"
dependencies = [
    "graph-db",
    "lite-llm",
    "pandas>=2.3.1",
]

[project.scripts]
rag = "rag:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
lite-llm = { workspace = true }
graph-db = { workspace = true }
